# autophotos

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  FEATURES.md  GIT_HISTORY.md  PLAN.md  README.md  SETUP.md  TAURI.md  pyproject.toml
autophotos/: __init__.py  api.py  assets.py  categories.py  cli.py  config.py  crop.py  db.py  decisions.py  embed.py  exif.py  export.py  group.py  hashing.py  pick.py  pipeline.py  raw.py  report.py  scan.py  score.py  semantic.py  taste.py  xmp.py
autophotos/web/: culler.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: test_captions.py  test_categories.py  test_crop.py  test_decisions.py  test_engine.py  test_export.py  test_pick.py  test_semantic.py  test_taste.py
