[project]
name = "autophotos"
version = "0.1.0"
description = "Headless photo ingest / cull / group / score engine"
requires-python = ">=3.10"
dependencies = [
    "rawpy>=0.19",
    "Pillow>=10",
    "numpy>=1.24",
    "exifread>=3.0",
    "xxhash>=3.0",
]

[project.optional-dependencies]
clip = ["torch>=2.0", "open_clip_torch>=2.20"]
api = ["fastapi>=0.110", "uvicorn>=0.27"]

[project.scripts]
autophotos = "autophotos.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
