[project]
name = "autophotos"
version = "0.2.1"
description = "Filesystem-first photo culling / grouping / scoring / semantic engine for a mirrorless workflow"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "William" }]
license = { text = "MIT" }
dependencies = [
    "rawpy>=0.19",
    "Pillow>=10",
    "numpy>=1.24",
    "exifread>=3.0",
    "xxhash>=3.0",
]

[project.optional-dependencies]
clip = ["torch>=2.0", "open_clip_torch>=2.20"]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
caption = ["transformers>=4.40", "torch>=2.0"]
dev = ["pytest>=7"]
all = ["torch>=2.0", "open_clip_torch>=2.20", "fastapi>=0.110",
       "uvicorn>=0.27", "transformers>=4.40", "pytest>=7"]

[project.scripts]
autophotos = "autophotos.cli:main"

[project.urls]
Homepage = "https://github.com/WeustiS/autophotos"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autophotos*"]

[tool.setuptools.package-data]
autophotos = ["web/*.html"]
